# goattest

./: .gitignore  functional_tests.py  pyproject.toml
accounts/: authentication.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_token.py
accounts/tests/: test_authentication.py  test_views.py
functional_tests/: base.py  test_layout_and_styling.py  test_list_item_validation.py  test_my_lists.py  test_simple_list_creation.py  tests.py
lists/: forms.py  models.py  tests.py  urls.py  views.py
lists/migrations/: 0001_initial.py  0002_list.py  0003_item_list.py  0004_auto_20200916_1152.py
lists/static/tests/: test.html
lists/templates/: base.html  home.html  list.html
lists/tests/: test_forms.py  test_models.py  test_views.py
superlists/: settings.py  urls.py
