[tool.poetry]
name = "goattest"
version = "0.1.0"
description = ""
authors = ["Adrian Murach <adrian.murach95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.1"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
